--- a/react-js/package.json
+++ b/react-js/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sign-webapp",
+  "name": "react-js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "dev": "webpack-dev-server --mode=development --open --hot",
     "build": "webpack --mode=production"
